- Fixed width by 2 pixel
- Added headers to the rogue table for No Armor and Heavy Armor.
- Tried to change the field set from creating its own table, to just create rows in the existing table. This is malformed HMTL, but it might look prettier

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1647,7 +1647,9 @@
         <input type="radio" name="attr_tab15" class="sheet-tab sheet-tab60" value="2"/><span class="sheet-tab sheet-tab60">S.P./D.S.</span><br><br>
 
     <div class="sheet-tab-content sheet-section-rogue-standard"><h4><b>Standard</b></h4><br>
-<h4><b>Backstab Multiplier:</b></h4><input type="text" name="attr_backstabmultiplier" title="@{backstabmultiplier}"class="tiny">&nbsp;&nbsp;<h4><b>Please input a similar macro (see below) here:<input type="text" name="attr_rogue-level-base" title="@{rogue-level-base}" class="sheet-display" value="30+(30*@{level-class1})"></b></h4><br>
+<h4><b>Backstab Multiplier:</b></h4><input type="text" name="attr_backstabmultiplier" title="@{backstabmultiplier}"class="tiny">&nbsp;&nbsp;<h4><b>Please input a similar macro (see below) here:<input type="text" name="attr_rogue-level-base" title="@{rogue-level-base}" class="sheet-display" value="30+(30*@{level-class1})"></b></h4>
+            <br>
+            <br>
 <table style='border-collapse: collapse; border-spacing: 0;'>
     <tr>
             <td></td>
@@ -1657,6 +1659,10 @@
             <td></td>
             <td></td>
             <td><input type="text" class="sheet-short" name="attr_all-thief-points-remain" title="@{all-thief-points-remain}" value="(@{rogue-level-base})-(@{ppl})-(@{oll})-(@{rtl})-(@{msl})-(@{hsl})-(@{dnl})-(@{cwl})-(@{rll})-(@{dml})-(@{dil})-(@{brl})-(@{tul})-(@{ebl})-(@{fdl})-(@{apl})-(@{newskill})" disabled="true"><input type="text" name="attr_newskill" value="0" style="display: none;"></td>
+            <td></td>
+            <td></td>
+            <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;" colspan="3">No Armor</td>
+            <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;" colspan="3">Heavy Armor</td>
     </tr>
     <tr>
             <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Skill</td>
@@ -1668,12 +1674,12 @@
             <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Level</td>
             <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Total</td>
             <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Leather Armor</td>
-            <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">No Armor Bonus |</td>
+            <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Bonus</td>
             <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Total</td>
             <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;"></td>
-            <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Heavy Armor Penelty |</td>
+            <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Penelty</td>
             <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Total</td>
-            <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_armorname" title="@{armorname}" class="sheet-short" placeholder="Studded Leather" /></td>
+            <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_armorname" title="@{armorname}" class="sheet-rogue" placeholder="Studded Leather" /></td>
     </tr>
     <tr>
             <td style="background-color: #7C0303; color: #FFF; font-family: Arial; font-weight: bold;">Pick Pockets</td>
@@ -1828,26 +1834,26 @@
             <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_ibarmort" title="@{ibarmort}" class="sheet-short" value="(@{ibt})+(@{ibarmorp})" disabled />%</td>
             <td><button type="roll" name="roll_ibarmor" title="%{ibarmor}" value="/gmroll [[1d100cs<1cf>96+(?{Misc. modifier|0})]]&le;[[(@{ibarmort})]] [Legend Lore (in @{armorname})]">Armor</button></td>
     </tr>
+    <fieldset name="attr_customrogue" title="@{customrogue}" class="repeating_customrogue">
+            <tr>
+                    <td style="background-color: #7C0303; color: #FFF;"><input type="text" name="attr_customskill" title="@{repeating_customrogue_$X_customskill}" class="sheet-rogue" placeholder="New Rogue Skill"/></td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crb" title="@{repeating_customrogue_$X_crb}" class="sheet-short" value="0"/>%</td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crr" title="@{repeating_customrogue_$X_crr}" class="sheet-short" value="0" />%</td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crd" title="@{repeating_customrogue_$X_crd}" class="sheet-short" value="0" />%</td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crk" title="@{repeating_customrogue_$X_crk}" class="sheet-short" value="0" />%</td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crm" title="@{repeating_customrogue_$X_crm}" class="sheet-short" value="0" />%</td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crl" title="@{repeating_customrogue_$X_crl}" class="sheet-short" value="0" />%</td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crt" title="@{repeating_customrogue_$X_crt}" value="(@{crb})+(@{crr})+(@{crd})+(@{crk})+(@{crm})+(@{crl})" disabled="true" class="sheet-short"/>%</td>
+                    <td><button type="roll" name="roll_cr" title="%{repeating_customrogue_$X_cr}" value="/gmroll [[1d100cs<1cf>96+(?{Misc. modifier|0})]]&le;[[(@{crt})]] [@{customskill} (in Leather Armor)]">Leather Armor</button></td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crnoarmorb" title="@{repeating_customrogue_$X_crnoarmorb}" class="sheet-short" value="0" />%</td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crnoarmort" title="@{repeating_customrogue_$X_crnoarmort}" class="sheet-short" value="(@{crt})+(@{crnoarmorb})" disabled />%</td>
+                    <td><button type="roll" name="roll_crnoarmor" title="%{repeating_customrogue_$X_crnoarmor}" value="/gmroll [[1d100cs<1cf>96+(?{Misc. modifier|0})]]&le;[[(@{crnoarmort})]] [@{customskill} (in No Armor)]">No Armor</button></td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crarmorp" title="@{repeating_customrogue_$X_crarmorp}" class="sheet-short" value="-0" />%</td>
+                    <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crarmort" title="@{repeating_customrogue_$X_crarmort}" class="sheet-short" value="(@{crt})+(@{crarmorp})" disabled />%</td>
+                    <td><button type="roll" name="roll_crarmor" title="%{repeating_customrogue_$X_crarmorp}" value="/gmroll [[1d100cs<1cf>96+(?{Misc. modifier|0})]]&le;[[(@{crarmort})]] [@{customskill} (in @{armorname})]">Armor</button></td>
+            </tr>
+    </fieldset>
     </table>
-    <fieldset name="attr_customrogue" title="@{customrogue}" class="repeating_customrogue"><table style="border-collapse: collapse; border-spacing: 0;">
-    <tr>
-            <td style="background-color: #7C0303; color: #FFF;"><input type="text" name="attr_customskill" title="@{repeating_customrogue_$X_customskill}" class="sheet-rogue" placeholder="New Rogue Skill"/></td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crb" title="@{repeating_customrogue_$X_crb}" class="sheet-short" value="0"/>%</td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crr" title="@{repeating_customrogue_$X_crr}" class="sheet-short" value="0" />%</td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crd" title="@{repeating_customrogue_$X_crd}" class="sheet-short" value="0" />%</td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crk" title="@{repeating_customrogue_$X_crk}" class="sheet-short" value="0" />%</td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crm" title="@{repeating_customrogue_$X_crm}" class="sheet-short" value="0" />%</td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crl" title="@{repeating_customrogue_$X_crl}" class="sheet-short" value="0" />%</td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crt" title="@{repeating_customrogue_$X_crt}" value="(@{crb})+(@{crr})+(@{crd})+(@{crk})+(@{crm})+(@{crl})" disabled="true" class="sheet-short"/>%</td>
-            <td><button type="roll" name="roll_cr" title="%{repeating_customrogue_$X_cr}" value="/gmroll [[1d100cs<1cf>96+(?{Misc. modifier|0})]]&le;[[(@{crt})]] [@{customskill} (in Leather Armor)]">Leather Armor</button></td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crnoarmorb" title="@{repeating_customrogue_$X_crnoarmorb}" class="sheet-short" value="0" />%</td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crnoarmort" title="@{repeating_customrogue_$X_crnoarmort}" class="sheet-short" value="(@{crt})+(@{crnoarmorb})" disabled />%</td>
-            <td><button type="roll" name="roll_crnoarmor" title="%{repeating_customrogue_$X_crnoarmor}" value="/gmroll [[1d100cs<1cf>96+(?{Misc. modifier|0})]]&le;[[(@{crnoarmort})]] [@{customskill} (in No Armor)]">No Armor</button></td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crarmorp" title="@{repeating_customrogue_$X_crarmorp}" class="sheet-short" value="-0" />%</td>
-            <td style="color: #FFF; font-family: Arial; font-weight: bold;"><input type="text" name="attr_crarmort" title="@{repeating_customrogue_$X_crarmort}" class="sheet-short" value="(@{crt})+(@{crarmorp})" disabled />%</td>
-            <td><button type="roll" name="roll_crarmor" title="%{repeating_customrogue_$X_crarmorp}" value="/gmroll [[1d100cs<1cf>96+(?{Misc. modifier|0})]]&le;[[(@{crarmort})]] [@{customskill} (in @{armorname})]">Armor</button></td>
-    </tr>
-    </table></fieldset>        
             <div class="sheet-3colrow">
                     <div class="sheet-col">
                             <h4><b>A theif can wear Leather Armor (AC 8), Padded Leather (AC 8), Studded Leather (AC 7), or Elven Chain Mail (AC 5)</b></h4>
